--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "rxjs": "~6.6.0",
+    "safe-pipe": "^1.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
